prevent horizontal scrolling

--- a/web/src/main.styl
+++ b/web/src/main.styl
@@ -18,8 +18,9 @@ textarea {
 body {
   color: #333;
   font-size: 16px;
-  width: 100%;
   height: 100%;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 body,
@@ -51,6 +52,7 @@ button {
 .app {
   bottom: 0;
   right: 0;
+  overflow-x: hidden;
   position: absolute;
   left: 0;
   top: 0;
